# mvstar

./: README.md  pyproject.toml
data/movies/year=2022/: data.json
note/: ad.ipynb  aws_sparkc.ipynb  json.ipynb
src/mvstar/: .dynamic.py.swp  dynamic.py  movie.py
tests/: test_movie.py
